[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/PolyHavenImport/logo-256.png" type="Texture" id=1]
[ext_resource path="res://addons/PolyHavenImport/login.gd" type="Script" id=2]

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterColumn" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_right = 128.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterColumn"]
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 1 )

[node name="TokenInput" type="LineEdit" parent="CenterColumn"]
margin_top = 272.0
margin_right = 256.0
margin_bottom = 296.0
clear_button_enabled = true
placeholder_text = "Access Token"

[node name="LoginButton" type="Button" parent="CenterColumn"]
margin_top = 312.0
margin_right = 256.0
margin_bottom = 332.0
disabled = true
text = "Login"

[node name="Instructions" type="Label" parent="CenterColumn"]
margin_top = 348.0
margin_right = 256.0
margin_bottom = 430.0
text = "To continue, you'll need to create an access token at godotassets.com

Access tokens expire after 1 hour unless they are used"
autowrap = true

[node name="LinkButton" type="LinkButton" parent="CenterColumn"]
margin_top = 446.0
margin_right = 256.0
margin_bottom = 460.0
text = "How do I get a token?"
[connection signal="pressed" from="CenterColumn/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="CenterColumn/LinkButton" to="." method="_on_LinkButton_pressed"]
